Top-align image paragraphs in article + make newlines work correctly

--- a/public/article/style.css
+++ b/public/article/style.css
@@ -119,8 +119,12 @@ a.glossaryLink {
 }
 .imageCol:last-child {
   text-align: left;
+  vertical-align: top;
 }
 .paragraph {
-  margin-top: 10px !important;
+  margin-top: 20px !important;
   margin-bottom: 20px;
+}
+.imageCol > .paragraph {
+  margin: 0 !important;
 }
